--- a/index.html
+++ b/index.html
@@ -7,10 +7,18 @@
     <title>Document</title>
 </head>
 <body>
-        <input type="text" name="rupees" id="rupees" />
-        <input type="button" name="sr1" value="Click Here" onClick="testSkill()"/>
-         
-        <div id="container"></div>
+        <!-- <div class="container">
+                <input type="text" class="form-control" id="number" onkeyup="update();" /*this code prevent non numeric letters*/ onkeydown="return (event.ctrlKey || event.altKey 
+                                || (47<event.keyCode && event.keyCode<58 && event.shiftKey==false) 
+                                || (95<event.keyCode && event.keyCode<106)
+                                || (event.keyCode==8) || (event.keyCode==9) 
+                                || (event.keyCode>34 && event.keyCode<40) 
+                                || (event.keyCode==46) )" />
+                <br/>
+                <div id="container">Here The Numbers Printed</div>
+              </div>  -->
+    <div id="results"></div>
+
     <script src="index.js"></script>
 </body>
 </html>
