--- a/index.html
+++ b/index.html
@@ -4,20 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Digits to Words</title>
 </head>
 <body>
-        <!-- <div class="container">
-                <input type="text" class="form-control" id="number" onkeyup="update();" /*this code prevent non numeric letters*/ onkeydown="return (event.ctrlKey || event.altKey 
-                                || (47<event.keyCode && event.keyCode<58 && event.shiftKey==false) 
-                                || (95<event.keyCode && event.keyCode<106)
-                                || (event.keyCode==8) || (event.keyCode==9) 
-                                || (event.keyCode>34 && event.keyCode<40) 
-                                || (event.keyCode==46) )" />
-                <br/>
-                <div id="container">Here The Numbers Printed</div>
-              </div>  -->
-    <div id="results"></div>
+    <div id="wordNums"></div>
 
     <script src="index.js"></script>
 </body>
